# ToolUseEnhanceProject

./: .gitignore  README.md  pyproject.toml
bfcl_runs/result_grpo_full/meta-llama_Llama-3.2-1B-Instruct-FC/live/: BFCL_v4_live_irrelevance_result.json  BFCL_v4_live_relevance_result.json
bfcl_runs/result_grpo_full/meta-llama_Llama-3.2-1B-Instruct-FC/non_live/: BFCL_v4_irrelevance_result.json  BFCL_v4_multiple_result.json  BFCL_v4_simple_python_result.json
bfcl_runs/score_grpo_full/: data_live.csv  data_non_live.csv  data_overall.csv
bfcl_runs/score_grpo_full_13cat_fmt/: data_agentic.csv  data_format_sensitivity.csv  data_live.csv  data_non_live.csv  data_overall.csv
bfcl_runs/score_grpo_toolace_13cat/: data_live.csv  data_multi_turn.csv  data_non_live.csv  data_overall.csv
bfcl_runs/score_sft/: data_live.csv  data_non_live.csv  data_overall.csv
bfcl_runs/score_sft_13cat_fmt/: data_live.csv  data_non_live.csv  data_overall.csv
data/raw_selfbuilt/: synthetic_tooluse_1000.jsonl
examples/: sample_bfcl.jsonl
reports/: bfcl_13cat_summary.csv  bfcl_13cat_summary.md
scripts/: autodl_setup.sh  download_bfcl_subset.py  evaluate_reward_file.py  generate_synthetic_tooluse_data.py  prepare_bfcl_dataset.py  prepare_toolace_dataset.py  train_grpo.py
src/trl_grpo_tooluse/: __init__.py  data_prep.py  rewards.py  tool_parser.py  toolace_prep.py
tests/: test_data_prep.py  test_data_prep_bom.py  test_download_bfcl_subset.py  test_rewards.py  test_synthetic_generator.py  test_toolace_prep.py  test_train_grpo_config.py
(+91 files in other folders)
